add DefaultLatestProfileMergeAggregatorTest